@@ -19,6 +19,7 @@
     <property name="behaviors">
         <element value="plone.app.dexterity.behaviors.metadata.IBasic" />
         <element value="plone.app.content.interfaces.INameFromTitle" />
+        <element value="plone.app.relationfield.behavior.IRelatedItems"/>
     </property>
 
     <!-- View information -->
