@@ -5,7 +5,8 @@ Changelog
 2.4.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Support dexterity relations.
+  [jone]
 
 
 2.4.1 (2014-12-02)
